Bug 133278 - Export as ODF doesn't work on iOS
Summary: Export as ODF doesn't work on iOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.0.beta0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-22 16:45 UTC by Nicolas Christener
Modified: 2020-07-01 22:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
WIP patch (3.95 KB, patch)
2020-06-01 13:57 UTC, How can I remove my account?
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2020-05-22 16:45:22 UTC
Description:
Exporting an existing document as ODF file does not work on iOS by using "File > Export as > ODF text document (.odt)".

There's no error message - just nothing happens.

Steps to Reproduce:
1. Open a *.odt writer document using the iOS app
2. Tap "File > Export as > ODF text document (.odt)"

Actual Results:
Nothing happens after taping the said menu item.

Expected Results:
The iOS file dialog should appear.


Reproducible: Always


User Profile Reset: No



Additional Info:
Tested with 4.2.4 (55) on iPadOS 13.4.1.
Comment 1 How can I remove my account? 2020-06-01 12:47:58 UTC
The problem is caused by attempting to export to the same name as the document has already been copied to for editing. We need to use a different directory for the copy where we save a copy that is handed to the UIDocumentPickerViewController.
Comment 2 How can I remove my account? 2020-06-01 13:57:59 UTC
Created attachment 161493 [details]
WIP patch

Spent a short time on this while waiting for a compilation to finish, but sadly this attempt did not work after all. For some reason the saveAs call does not manage to write the file.
Comment 3 How can I remove my account? 2020-06-01 14:36:07 UTC
Or actually, the idea does seem to work after all, there must have been some wrongly created temp subdirectory existing on my device. https://gerrit.libreoffice.org/c/online/+/95295
Comment 4 Commit Notification 2020-06-01 15:09:22 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/commit/2bd05d68f790b3ca278d39da8f6b062666df8cf9

tdf#133278: Don't overwrite the copy of the document that we are editing
Comment 5 Nicolas Christener 2020-06-23 12:13:59 UTC
As commented in #128920 the issue is fixed in 4.2.5 (57).

This issue here can be closed too :)

Thanks a lot to the Collabora team and especially Tor for taking care of this!
Comment 6 Commit Notification 2020-07-01 16:27:15 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/online/commit/dc361c46b700fac7454e9d57cf9fa3e6fc22313c

tdf#133278: Don't overwrite the copy of the document that we are editing